custom.css
@page {
	/* size: 74mm 105mm; */
	/* size: 105mm 148mm; */
	size: A7;
	margin: 3mm;
	padding: 0mm;
	border: 1px solid black;
}

html {
	font-family: 'Nimbus Mono PS', 'Courier New', monospace;
}

body {
	padding: 0mm;
}

img {
	max-width: 100%;
}

img, h1, h2, p {
	padding-left: 0mm;
	padding-right: 0mm;
	margin-left: 0mm;
	margin-right: 0mm;
}

/* 
body {
	font-family: 'Nimbus Mono PS', 'Courier New', monospace;
	line-height: 2;
	margin: 0;
	padding: 0;
}


h1 {
	text-transform: uppercase;
	text-align: center;
	color: white;
	margin-bottom: 0;
}


h2 {
	text-align: right;
	color: darkgrey;
	line-height: 1;
	display: inline-block;
	float: right;
}

h3 {
	text-align: left;
	color: darkgrey;
	line-height: 1;
	display: inline-block;
} */

